@@ -297,6 +297,8 @@
 #define GUI_THEME_LISTVIEWBUTTON_SELECTED_SEPERATOR_LEFT	2081
 #define GUI_THEME_LISTVIEWBUTTON_SELECTED_SEPERATOR_RIGHT	2082
 
+#define GUI_THEME_LISTVIEWBUTTON_SORTER						2088
+
 // ** TabControl Button ************************************************************ //
 
 #define GUI_THEME_TABCONTROL_LEFT_TOP				2100
@@ -539,6 +541,7 @@
 #define GUI_THEME_SALLY_ICON_DATE					2533
 #define GUI_THEME_SALLY_ICON_SYSTEM_BATTERY			2534
 #define GUI_THEME_SALLY_ICON_SYSTEM_LOCK			2535
+#define GUI_THEME_SALLY_ICON_NOTIFY					2536
 
 #define GUI_THEME_SALLY_ICON_BIG_FOLDER				2540
 #define GUI_THEME_SALLY_ICON_BIG_HD					2541
